--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -18,36 +18,36 @@ add_library(ss_util SHARED
 		src/Boolean.cxx
 		src/BufferedArray.cxx
 		src/ByteUtil.cxx
-#		src/Calendar.cxx
+		src/Calendar.cxx
 		src/Checksum.cxx
 		src/CodecTest.cxx
 		src/Collection.cxx
-#		src/CollectionTest.cxx
+		src/CollectionTest.cxx
 		src/Condition.cxx
-#		src/Config.cxx
+		src/Config.cxx
 		src/CRC32.cxx
 		src/Date.cxx
 		src/debug.c
-#		src/Dlist.cxx
-#		src/DllManager.cxx
+		src/Dlist.cxx
+		src/DllManager.cxx
 		src/Error.cxx
 		src/Event.cxx
 		src/Exception.cxx
-#		src/File.cxx
-#		src/Graph.cxx
-#		src/HashTable.cxx
+		src/File.cxx
+		src/Graph.cxx
+		src/HashTable.cxx
 		src/Hex.cxx
 		src/Inet.cxx
-#		src/IOException.cxx
+		src/IOException.cxx
 		src/Main.cxx
-#		src/Matrix.cxx
+		src/Matrix.cxx
 		src/MiscTest.cxx
 		src/Monitor.cxx
 		src/Mutex.cxx
 		src/Packet.cxx
 		src/Queue.cxx
-#		src/Slist.cxx
-#		src/Socket.cxx
+		src/Slist.cxx
+		src/Socket.cxx
 		src/Stack.cxx
 		src/String.cxx
 		src/StringTokenizer.cxx
@@ -55,12 +55,12 @@ add_library(ss_util SHARED
 		src/Thread.cxx
 		src/ThreadException.cxx
 		src/ThreadTest.cxx
-#		src/ThreadWorkerPool.cxx
+		src/ThreadWorkerPool.cxx
 		src/Timer.cxx
-#		src/TimeTest.cxx
-#		src/TimeZone.cxx
+		src/TimeTest.cxx
+		src/TimeZone.cxx
 		src/Tree.cxx
 		src/UU.cxx
 		src/Void.cxx
-#		src/WorkerPool.cxx
+		src/WorkerPool.cxx
 	)
