--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -10,8 +10,8 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include
 		${CMAKE_CURRENT_SOURCE_DIR}/../util/include
 		)
 add_library(ss_game SHARED
-#		src/GameClient.cxx
+		src/GameClient.cxx
 		src/GameExceptions.cxx
-#		src/GameServer.cxx
-#		src/GameSession.cxx
+		src/GameServer.cxx
+		src/GameSession.cxx
 	)
